--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-currency-input-field": "^3.6.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.4.33",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
